<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".FilterActivity">

  <CheckBox
    android:id="@+id/gdpCheckBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="64dp"
    android:text="@string/gdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />

  <CheckBox
    android:id="@+id/fdiInfCheckbox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="64dp"
    android:text="@string/fdi_inf"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/gdpCheckBox" />

  <CheckBox
    android:id="@+id/fdiOutfCheckbox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="64dp"
    android:text="@string/fdi_outf"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fdiInfCheckbox" />

  <CheckBox
    android:id="@+id/ieFlowCheckbox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="64dp"
    android:text="@string/ie_flow"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fdiOutfCheckbox" />

  <Button
    android:id="@+id/showButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:text="@string/show"
    android:onClick="onShow"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ieFlowCheckbox" />

  <ImageView
    android:id="@+id/gdpIcon2"
    android:layout_width="96dp"
    android:layout_height="96dp"
    android:background="#80673AB7"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/agricultureIcon2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/showButton"
    app:srcCompat="@drawable/gdp" />

  <ImageView
    android:id="@+id/agricultureIcon2"
    android:layout_width="96dp"
    android:layout_height="96dp"
    android:layout_marginBottom="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/showButton"
    app:layout_constraintStart_toStartOf="@+id/showButton"
    app:layout_constraintTop_toBottomOf="@+id/showButton"
    app:srcCompat="@drawable/agronomy" />

  <ImageView
    android:id="@+id/debtIcon2"
    android:layout_width="96dp"
    android:layout_height="96dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/agricultureIcon2"
    app:layout_constraintTop_toBottomOf="@+id/showButton"
    app:srcCompat="@drawable/debt" />

  <Spinner
    android:id="@+id/countrySpinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:entries="@array/countries"
    android:minHeight="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>